--- a/tests/DataReaderExtensionTests.g.tt
+++ b/tests/DataReaderExtensionTests.g.tt
@@ -1,4 +1,4 @@
-﻿<#@ template debug="false" hostspecific="true" language="C#" #>
+<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".cs" #>
 <#@ assembly name="System.Core" #>
 <#@ assembly name="System.Data" #>
